--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "genkit": "^1.8.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
+    "mongodb": "^6.5.0",
+    "@azure/storage-blob": "^12.17.0",
     "next": "15.2.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
